feat: enable entity value range for list variable in the CH